--- a/IdealizeSpetral.jl/exp/HSt42/plot_fig.ipynb
+++ b/IdealizeSpetral.jl/exp/HSt42/plot_fig.ipynb
@@ -23,14 +23,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(50, 20, 64, 128)\n"
+      "(5, 20, 64, 128)\n"
      ]
     }
    ],
    "source": [
-    "to = 50\n",
-    "savepath = \"graphs/modqv_with_corrections_no_LH/\"\n",
-    "file = \"/home/Aaron/Isca_advection/IdealizeSpetral.jl/exp/HSt42/outputs/0522/modqv_with_corrections_no_LH_all.dat\"\n",
+    "to = 5\n",
+    "savepath = \"graphs/test_only_advection_all\"\n",
+    "file = \"/home/Aaron/Isca_advection/IdealizeSpetral.jl/exp/HSt42/outputs/0523/test_only_advection_all.dat\"\n",
     "\n",
     "\n",
     "ds = h5py.File(file, \"r\")\n",
@@ -68,7 +68,7 @@
     "    fig.colorbar(cs1, orientation='horizontal')\n",
     "    ax[0, 1].set_title(f\"Kinetic Energy at top\")\n",
     "\n",
-    "    cs2 = ax[1, 0].contourf(xx, yy, qv[t, 19], levels=np.linspace(0, 5, 11), extend='max')\n",
+    "    cs2 = ax[1, 0].contourf(xx, yy, qv[t, 19])\n",
     "    fig.colorbar(cs2, orientation='horizontal')\n",
     "    ax[1, 0].set_title(f\"qv at sfc\")\n",
     "\n",
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -107,15 +107,15 @@
       "  libswresample   3.  5.100 /  3.  5.100\n",
       "  libpostproc    55.  5.100 / 55.  5.100\n",
       "Input #0, image2, from '%d.png':\n",
-      "  Duration: 00:00:02.00, start: 0.000000, bitrate: N/A\n",
+      "  Duration: 00:00:00.20, start: 0.000000, bitrate: N/A\n",
       "    Stream #0:0: Video: png, rgba(pc), 3600x3600 [SAR 11811:11811 DAR 1:1], 25 fps, 25 tbr, 25 tbn, 25 tbc\n",
       "Stream mapping:\n",
       "  Stream #0:0 -> #0:0 (png (native) -> h264 (libx264))\n",
       "Press [q] to stop, [?] for help\n",
-      "\u001b[1;36m[libx264 @ 0x55d3f99d1fc0] \u001b[0musing SAR=1/1\n",
-      "\u001b[1;36m[libx264 @ 0x55d3f99d1fc0] \u001b[0musing cpu capabilities: MMX2 SSE2Fast SSSE3 SSE4.2 AVX FMA3 BMI2 AVX2\n",
-      "\u001b[1;36m[libx264 @ 0x55d3f99d1fc0] \u001b[0mprofile High, level 6.0, 4:2:0, 8-bit\n",
-      "\u001b[1;36m[libx264 @ 0x55d3f99d1fc0] \u001b[0m264 - core 157 - H.264/MPEG-4 AVC codec - Copyleft 2003-2018 - http://www.videolan.org/x264.html - options: cabac=1 ref=3 deblock=1:0:0 analyse=0x3:0x113 me=hex subme=7 psy=1 psy_rd=1.00:0.00 mixed_ref=1 me_range=16 chroma_me=1 trellis=1 8x8dct=1 cqm=0 deadzone=21,11 fast_pskip=1 chroma_qp_offset=-2 threads=112 lookahead_threads=16 sliced_threads=0 nr=0 decimate=1 interlaced=0 bluray_compat=0 constrained_intra=0 bframes=3 b_pyramid=2 b_adapt=1 b_bias=0 direct=1 weightb=1 open_gop=0 weightp=2 keyint=250 keyint_min=5 scenecut=40 intra_refresh=0 rc_lookahead=40 rc=crf mbtree=1 crf=23.0 qcomp=0.60 qpmin=0 qpmax=69 qpstep=4 ip_ratio=1.40 aq=1:1.00\n",
+      "\u001b[1;36m[libx264 @ 0x55a1a5416a80] \u001b[0musing SAR=1/1\n",
+      "\u001b[1;36m[libx264 @ 0x55a1a5416a80] \u001b[0musing cpu capabilities: MMX2 SSE2Fast SSSE3 SSE4.2 AVX FMA3 BMI2 AVX2\n",
+      "\u001b[1;36m[libx264 @ 0x55a1a5416a80] \u001b[0mprofile High, level 6.0, 4:2:0, 8-bit\n",
+      "\u001b[1;36m[libx264 @ 0x55a1a5416a80] \u001b[0m264 - core 157 - H.264/MPEG-4 AVC codec - Copyleft 2003-2018 - http://www.videolan.org/x264.html - options: cabac=1 ref=3 deblock=1:0:0 analyse=0x3:0x113 me=hex subme=7 psy=1 psy_rd=1.00:0.00 mixed_ref=1 me_range=16 chroma_me=1 trellis=1 8x8dct=1 cqm=0 deadzone=21,11 fast_pskip=1 chroma_qp_offset=-2 threads=112 lookahead_threads=16 sliced_threads=0 nr=0 decimate=1 interlaced=0 bluray_compat=0 constrained_intra=0 bframes=3 b_pyramid=2 b_adapt=1 b_bias=0 direct=1 weightb=1 open_gop=0 weightp=2 keyint=250 keyint_min=5 scenecut=40 intra_refresh=0 rc_lookahead=40 rc=crf mbtree=1 crf=23.0 qcomp=0.60 qpmin=0 qpmax=69 qpstep=4 ip_ratio=1.40 aq=1:1.00\n",
       "Output #0, mov, to '0.mov':\n",
       "  Metadata:\n",
       "    encoder         : Lavf58.29.100\n",
@@ -124,26 +124,25 @@
       "      encoder         : Lavc58.54.100 libx264\n",
       "    Side data:\n",
       "      cpb: bitrate max/min/avg: 0/0/0 buffer size: 0 vbv_delay: -1\n",
-      "frame=   50 fps= 14 q=-1.0 Lsize=    3681kB time=00:00:09.40 bitrate=3207.9kbits/s speed=2.64x    \n",
-      "video:3680kB audio:0kB subtitle:0kB other streams:0kB global headers:0kB muxing overhead: 0.038031%\n",
-      "\u001b[1;36m[libx264 @ 0x55d3f99d1fc0] \u001b[0mframe I:1     Avg QP:12.18  size:211484\n",
-      "\u001b[1;36m[libx264 @ 0x55d3f99d1fc0] \u001b[0mframe P:19    Avg QP:18.93  size: 89845\n",
-      "\u001b[1;36m[libx264 @ 0x55d3f99d1fc0] \u001b[0mframe B:30    Avg QP:21.69  size: 61624\n",
-      "\u001b[1;36m[libx264 @ 0x55d3f99d1fc0] \u001b[0mconsecutive B-frames:  6.0% 36.0% 18.0% 40.0%\n",
-      "\u001b[1;36m[libx264 @ 0x55d3f99d1fc0] \u001b[0mmb I  I16..4: 43.0% 44.9% 12.2%\n",
-      "\u001b[1;36m[libx264 @ 0x55d3f99d1fc0] \u001b[0mmb P  I16..4:  1.9%  7.9%  3.8%  P16..4:  3.7%  3.6%  1.6%  0.0%  0.0%    skip:77.4%\n",
-      "\u001b[1;36m[libx264 @ 0x55d3f99d1fc0] \u001b[0mmb B  I16..4:  1.4%  1.7%  1.5%  B16..8:  8.1%  5.1%  1.3%  direct: 0.5%  skip:80.6%  L0:54.1% L1:45.2% BI: 0.7%\n",
-      "\u001b[1;36m[libx264 @ 0x55d3f99d1fc0] \u001b[0m8x8 transform intra:49.8% inter:18.1%\n",
-      "\u001b[1;36m[libx264 @ 0x55d3f99d1fc0] \u001b[0mcoded y,uvDC,uvAC intra: 14.6% 33.0% 30.4% inter: 2.1% 3.1% 2.3%\n",
-      "\u001b[1;36m[libx264 @ 0x55d3f99d1fc0] \u001b[0mi16 v,h,dc,p: 66% 30%  4%  0%\n",
-      "\u001b[1;36m[libx264 @ 0x55d3f99d1fc0] \u001b[0mi8 v,h,dc,ddl,ddr,vr,hd,vl,hu: 35%  9% 52%  1%  1%  0%  1%  0%  1%\n",
-      "\u001b[1;36m[libx264 @ 0x55d3f99d1fc0] \u001b[0mi4 v,h,dc,ddl,ddr,vr,hd,vl,hu: 27% 27% 32%  2%  2%  2%  4%  2%  2%\n",
-      "\u001b[1;36m[libx264 @ 0x55d3f99d1fc0] \u001b[0mi8c dc,h,v,p: 65% 21% 10%  3%\n",
-      "\u001b[1;36m[libx264 @ 0x55d3f99d1fc0] \u001b[0mWeighted P-Frames: Y:0.0% UV:0.0%\n",
-      "\u001b[1;36m[libx264 @ 0x55d3f99d1fc0] \u001b[0mref P L0: 53.9%  2.4% 27.2% 16.5%\n",
-      "\u001b[1;36m[libx264 @ 0x55d3f99d1fc0] \u001b[0mref B L0: 76.3% 19.4%  4.3%\n",
-      "\u001b[1;36m[libx264 @ 0x55d3f99d1fc0] \u001b[0mref B L1: 96.5%  3.5%\n",
-      "\u001b[1;36m[libx264 @ 0x55d3f99d1fc0] \u001b[0mkb/s:3013.80\n"
+      "frame=    5 fps=0.0 q=-1.0 Lsize=     579kB time=00:00:00.40 bitrate=11856.5kbits/s speed=0.542x    \n",
+      "video:578kB audio:0kB subtitle:0kB other streams:0kB global headers:0kB muxing overhead: 0.148795%\n",
+      "\u001b[1;36m[libx264 @ 0x55a1a5416a80] \u001b[0mframe I:1     Avg QP:14.66  size:208207\n",
+      "\u001b[1;36m[libx264 @ 0x55a1a5416a80] \u001b[0mframe P:2     Avg QP:20.11  size:115725\n",
+      "\u001b[1;36m[libx264 @ 0x55a1a5416a80] \u001b[0mframe B:2     Avg QP:19.93  size: 75878\n",
+      "\u001b[1;36m[libx264 @ 0x55a1a5416a80] \u001b[0mconsecutive B-frames: 20.0% 80.0%  0.0%  0.0%\n",
+      "\u001b[1;36m[libx264 @ 0x55a1a5416a80] \u001b[0mmb I  I16..4: 39.1% 47.5% 13.4%\n",
+      "\u001b[1;36m[libx264 @ 0x55a1a5416a80] \u001b[0mmb P  I16..4:  2.9%  7.5%  6.4%  P16..4:  4.0%  3.3%  1.4%  0.0%  0.0%    skip:74.6%\n",
+      "\u001b[1;36m[libx264 @ 0x55a1a5416a80] \u001b[0mmb B  I16..4:  1.4%  1.7%  2.2%  B16..8:  8.9%  5.5%  1.5%  direct: 0.6%  skip:78.2%  L0:45.9% L1:53.2% BI: 0.9%\n",
+      "\u001b[1;36m[libx264 @ 0x55a1a5416a80] \u001b[0m8x8 transform intra:45.8% inter:20.9%\n",
+      "\u001b[1;36m[libx264 @ 0x55a1a5416a80] \u001b[0mcoded y,uvDC,uvAC intra: 11.9% 23.6% 21.7% inter: 2.4% 3.4% 2.3%\n",
+      "\u001b[1;36m[libx264 @ 0x55a1a5416a80] \u001b[0mi16 v,h,dc,p: 79% 18%  3%  0%\n",
+      "\u001b[1;36m[libx264 @ 0x55a1a5416a80] \u001b[0mi8 v,h,dc,ddl,ddr,vr,hd,vl,hu: 58%  7% 33%  1%  0%  0%  0%  0%  0%\n",
+      "\u001b[1;36m[libx264 @ 0x55a1a5416a80] \u001b[0mi4 v,h,dc,ddl,ddr,vr,hd,vl,hu: 39% 24% 21%  3%  3%  3%  3%  3%  2%\n",
+      "\u001b[1;36m[libx264 @ 0x55a1a5416a80] \u001b[0mi8c dc,h,v,p: 76% 14%  8%  2%\n",
+      "\u001b[1;36m[libx264 @ 0x55a1a5416a80] \u001b[0mWeighted P-Frames: Y:0.0% UV:0.0%\n",
+      "\u001b[1;36m[libx264 @ 0x55a1a5416a80] \u001b[0mref P L0: 73.4%  0.8% 25.8%\n",
+      "\u001b[1;36m[libx264 @ 0x55a1a5416a80] \u001b[0mref B L0: 80.3% 19.7%\n",
+      "\u001b[1;36m[libx264 @ 0x55a1a5416a80] \u001b[0mkb/s:4731.30\n"
      ]
     }
    ],
